# health-activity-tracker

./: .env.example  .gitignore  LICENSE  README.md  check.py  garmin_initial_import.py  processed_activities.json.example  pyproject.toml  requirements.txt  strava_tokens.json.example
health_tracker/: main.py  sync_service.py
health_tracker/config/: config.yaml
health_tracker/config/defaults/mapping/activity/: notion.yaml  sheets.yaml
health_tracker/config/defaults/mapping/health/: notion.yaml  sheets.yaml
health_tracker/data/: activity_data.py  day_health_data.py
health_tracker/destination/: base.py  destination.py  google_sheets.py  notion.py
health_tracker/destination/activities/: activities_target.py
health_tracker/destination/health/: health_target.py
health_tracker/destination/mapper/: abstract_activity_mapper.py  health_mapper.py  notion_mapper.py  sheets_activity_mapper.py  sheets_health_mapper.py
health_tracker/provider/: sync_provider.py
health_tracker/provider/abstract/: activities_provider.py  health_provider.py
health_tracker/provider/activities/: activities_source.py  strava.py
health_tracker/provider/health/: garmin.py  health_source.py
health_tracker/sheet/: activity_data_mapper.py  health_data_mapper.py
health_tracker/utils/: click_styling.py  column_mapping.py  config_loader.py  mapping_loader.py
